--- a/first_rmd.Rmd
+++ b/first_rmd.Rmd
@@ -2,7 +2,7 @@
 title: "First Rmd"
 author: "Marwa Mohamed"
 date: "5/28/2019"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
